--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "heroku local:start",
-    "super": "supervisor ./bin/www",
-    "start_old": "node ./bin/www"
+    "start": "node ./bin/www",
+    "heroku": "heroku local:start",
+    "super": "supervisor ./bin/www"
   },
   "engines": {
     "node": "8.9.1",
@@ -23,7 +23,7 @@
     "express-session": "^1.15.6",
     "method-override": "^2.3.10",
     "morgan": "~1.9.0",
-    "pg": "7.4.0",
+    "pg": "^7.4.0",
     "sequelize": "^4.37.5",
     "serve-favicon": "~2.4.5",
     "supervisor": "^0.12.0"
