--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "heroku local:start",
     "super": "supervisor ./bin/www",
     "start_old": "node ./bin/www",
-    "migrate_local": "sequelize db:migrate --url sqlite://$(pwd)/quiz.sqlite",
-    "seed_local": "sequelize db:seed:all --url sqlite://$(pwd)/quiz.sqlite",
+    "migrate_local": "./node_modules/.bin/sequelize db:migrate --url sqlite://$(pwd)/quiz.sqlite",
+    "seed_local": "./node_modules/.bin/sequelize db:seed:all --url sqlite://$(pwd)/quiz.sqlite",
     "open_heroku": "heroku open",
     "migrate_heroku": "heroku run ./node_modules/.bin/sequelize db:migrate --url \\$DATABASE_URL",
     "seed_heroku": "heroku run ./node_modules/.bin/sequelize db:seed:all --url \\$DATABASE_URL",
@@ -35,12 +35,14 @@
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
     "pg": "7.4.0",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^4.37.5",
     "sequelize-cli": "^4.0.0",
     "serve-favicon": "~2.4.5",
     "supervisor": "^0.12.0"
   },
   "devDependencies": {
+    "sqlite3": "^3.1.8",
     "mocha": "^5.1.1",
     "sqlite3": "^3.1.13",
     "zombie": "^6.1.2"
